# web-sw-cor24-apl

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  index.html
.agentrail/: instruction-lock.toml  plan.md  saga.toml
docs/: ai_agent_instructions.md  architecture.md  design.md  initial-prompt.txt  plan.md  prd.md  process.md
pages/: app-190650defadd1310.css  app-78f93d073e60a448.css  app-83d73a7cbb5e6d42.css  app-d81125033fe22dd9.css  app-de106621c6061ddb.css  index.html  web-sw-cor24-apl-1757d5d2424c5271_bg.wasm  web-sw-cor24-apl-21da697fd21a352e_bg.wasm  web-sw-cor24-apl-235dbb730330aa8a.js  web-sw-cor24-apl-235dbb730330aa8a_bg.wasm  web-sw-cor24-apl-28f6013eeba4b372_bg.wasm  web-sw-cor24-apl-2e9213f96a83ee22_bg.wasm  web-sw-cor24-apl-3bed8a5aab916745.js  web-sw-cor24-apl-3bed8a5aab916745_bg.wasm  web-sw-cor24-apl-3e09af9f70d79468_bg.wasm  web-sw-cor24-apl-41fc073a1cf32213_bg.wasm  web-sw-cor24-apl-47c8052238d99f92_bg.wasm  web-sw-cor24-apl-4d4202121177973e_bg.wasm  web-sw-cor24-apl-578c98855a1899f5_bg.wasm  web-sw-cor24-apl-5c27773536de596e_bg.wasm  web-sw-cor24-apl-5efa93c5ef5ebbfd_bg.wasm  web-sw-cor24-apl-74ea2095e79d58e9_bg.wasm  web-sw-cor24-apl-75dcc049b86a6b90_bg.wasm  web-sw-cor24-apl-77991572a382bbfa_bg.wasm  web-sw-cor24-apl-78eefd9c63cefcf6_bg.wasm  web-sw-cor24-apl-7d7dc6950fb281fc_bg.wasm  web-sw-cor24-apl-8178e9ded97a9d87_bg.wasm  web-sw-cor24-apl-9737be51b17257dc_bg.wasm  web-sw-cor24-apl-9d8b0d001dfa0881_bg.wasm  web-sw-cor24-apl-a108e0220b1e728c_bg.wasm  web-sw-cor24-apl-a380d306fb5bd599.js  web-sw-cor24-apl-a380d306fb5bd599_bg.wasm  (+12 more)
(+101 files in other folders)
