[package]
name = "web-sw-cor24-apl"
version = "0.1.0"
edition = "2024"
authors = ["Michael A Wright"]
license = "MIT"
description = "Browser-based APL environment on COR24"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cor24-emulator = { path = "../sw-cor24-emulator", default-features = false }
cor24-isa = { path = "../sw-cor24-isa", features = ["serde"] }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "HtmlInputElement", "HtmlDivElement", "HtmlSelectElement", "HtmlTextAreaElement", "HtmlElement", "HtmlAnchorElement", "KeyboardEvent", "MouseEvent", "Element", "DomRect", "Window", "Document", "File", "FileList", "Blob", "BlobPropertyBag", "Url"] }
js-sys = "0.3"
gloo = "0.11"
console_error_panic_hook = "0.1"

[build-dependencies]
cor24-emulator = { path = "../sw-cor24-emulator", default-features = false }

[profile.release]
opt-level = "z"
lto = true
